--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "assemble-contrib-permalinks": "*",
     "assemble-contrib-sitemap": "*",
     "grunt": "^0.4.5",
+    "grunt-bower-install": "^1.6.0",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-connect": "^0.8.0",
     "grunt-contrib-copy": "^0.5.0",
+    "grunt-contrib-jshint": "^0.12.0",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
     "load-grunt-tasks": "^0.6.0",
