--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "homepage": "https://github.com/OurPromises/hidden-voices",
   "author": {
-    "name": "Das, Deb",
+    "name": "Das, Abhishek",
     "url": "http://github.com/OurPromises/"
   },
   "repository": {
